--- a/README
+++ b/README
@@ -41,4 +41,15 @@ Transmissions are played back in order of when they began.
 Since the block uses zeros to determine whether a channel is active or
 not, it is important to squelch the inputs to this block.
 
+Build instructions:
+
+    cmake .
+    make
+    sudo make install
+    sudo ldconfig
+
+After running the above commands, "Queue" should appear under the
+"Operators" category in GNU Radio Companion, and "queue_ff" will be
+available in the "argilo" Python package.
+
 Contributions are welcome!
