--- a/README
+++ b/README
@@ -49,6 +49,11 @@ Build instructions:
     sudo make install
     sudo ldconfig
 
+If your GNU Radio is installed in /usr (rather than /usr/local), then
+replace the third line above with:
+
+    cmake -DCMAKE_INSTALL_PREFIX=/usr .
+
 After running the above commands, "Queue" should appear under the
 "Operators" category in GNU Radio Companion, and "queue_ff" will be
 available in the "argilo" Python package.
